package flight.reservation.plane;

public class Helicopter implements Aircraft {
    private final String model;
    private final int passengerCapacity;
    private static final int CREW_CAPACITY = 2;

    public Helicopter(String model) {
        this.model = model;
        if (model.equals("H1")) {
            passengerCapacity = 4;
        } else if (model.equals("H2")) {
            passengerCapacity = 6;
        } else {
            throw new IllegalArgumentException(String.format("Model type '%s' is not recognized", model));
        }
    }

    public String getModel() {
        return model;
    }

    public int getPassengerCapacity() {
        return passengerCapacity;
    }

    @Override
    public int getCrewCapacity() {
        return CREW_CAPACITY;
    }
}
